<resources>
    <string name="app_name">RumRunner</string>
    <string name="app_title">RumRunner</string>
    <string name="menu_button_title">Menu</string>
    <string name="randomDrinkButtonText">Explore</string>
    <string name="favouriteListButtonText">Favourites</string>
    <string name="warningText">RumRunner is your one stop shop for all your favourite cocktail recipes and more.\n\nPlease Remember to Drink Responsibly!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_frag_content_description_string">Small gold cocktail on a bar counter with an orange peel for garnish.</string>
    <string name="search_error">Unable to Process Request</string>
    <string name="ingredientsTitle">Ingredients</string>
    <string name="methodTitle">Method</string>
    <string name="fave_button_text">Fave?</string>
    <string name="confirmed_favourite">Fave!</string>
    <string name="delete_item">Delete Item</string>
    <string name="confirm_delete">Are you sure you want to delete this drink?</string>
</resources>