<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header"
        android:orientation="vertical"
        android:background="@color/black">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"
            android:background="@color/black"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="42sp"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <Button
            android:id="@+id/cocktailMenuButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0.3"
            android:backgroundTint="#8510d8"
            android:text="@string/menu_button_title"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/randomDrinkButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0.3"
            android:backgroundTint="#8510d8"
            android:text="@string/randomDrinkButtonText"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/favouriteListButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0.3"
            android:backgroundTint="#8510d8"
            android:text="@string/favouriteListButtonText"
            android:textColor="@color/white" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fragmentSocket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout"
        android:background="@color/purple_500"/>

</androidx.constraintlayout.widget.ConstraintLayout>