<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrinkViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/headerLayout">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/titleAndButton"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drinkNameTextView"
                android:textSize="24sp"
                android:text="@string/hello_blank_fragment"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favouriteButton"
                android:text="@string/fave_button_text"
                android:textColor="@color/button_text_color"
                android:backgroundTint="@color/fave_button_background_color"
                android:textSize="20sp"
                android:layout_below="@id/drinkNameTextView"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/drinkThumbImageView"
            android:src="@drawable/cocktail"
            android:layout_margin="10dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientsTitleTextView"
        android:text="@string/ingredientsTitle"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_below="@id/headerLayout"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientsTextView"
        android:text="ingredient text"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:layout_below="@id/ingredientsTitleTextView"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/methodTitle"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:id="@+id/methodTitleTextView"
        android:layout_below="@id/ingredientsTextView"
        android:paddingStart="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/methodTextView"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:text="method text"
        android:layout_below="@id/methodTitleTextView"
        android:layout_margin="10dp"/>

</RelativeLayout>